# HiGiangcoder

./: MODSORT.cpp  Numorder_lqdoj.cpp  check2code.cpp  gene.cpp  gene_linux.cpp  medium_template.cpp  palinn.cpp  readme.md  substr.cpp
CP/: a.cpp  a.py  long_template.cpp  short_template.cpp
Other/: a.cpp  a.out  a.py  readme.md  token_code.txt
Subject/: TKB_II.xlsx
Subject/OOP/TH/EnglishApp/: CMakeLists.txt  English_App_UML.dot  log_test.txt  main  makefile  run_english.py
Subject/OOP/TH/EnglishApp/backend/: init_database.py  main.py  requirements.txt
Subject/OOP/TH/EnglishApp/data/: english.db
Subject/OOP/TH/EnglishApp/frontend/: package-lock.json  package.json  tsconfig.json
Subject/OOP/TH/EnglishApp/frontend/src/: App.css  App.tsx  api.ts  types.ts
Subject/OOP/TH/EnglishApp/frontend/src/components/: Dashboard.tsx  LessonManager.tsx  Login.tsx  Progress.tsx  Quiz.tsx
Subject/OOP/TH/EnglishApp/include/: Database.h  DatabaseDAO.h  EnglishApp.h  GrammarLesson.h  Lesson.h  LessonFactory.h  Logger.h  Test.h  User.h  VocabularyLesson.h  Word.h
Subject/OOP/TH/EnglishApp/python_gui/: backend_client.py  init_database.py  lesson_manager.py  main.py  user_manager.py
Subject/OOP/TH/EnglishApp/python_gui/data/: english.db
Subject/OOP/TH/EnglishApp/src/: Database.cpp  EnglishApp.cpp  GrammarLesson.cpp  Lesson.cpp  LessonFactory.cpp  Logger.cpp  User.cpp  VocabularyLesson.cpp  Word.cpp  databaseDAO.cpp  main.cpp  python_bindings.cpp
github-tutorial/: readme.md
old_code/: Trie.cpp  mastermind.cpp  palinn.cpp  special.cpp
tmpdir/: readme.md
(+975 files in other folders)
